several quotes
