# ekubo/src/models/mod.rs
@@ -2,7 +2,11 @@ pub mod error_response;
 pub use self::error_response::ErrorResponse;
 pub mod pool_key;
 pub use self::pool_key::PoolKey;
+pub mod quote;
+pub use self::quote::Quote;
 pub mod quote_response;
 pub use self::quote_response::QuoteResponse;
+pub mod quotes;
+pub use self::quotes::Quotes;
 pub mod route_point;
 pub use self::route_point::RoutePoint;
