# ekubo/src/models/quotes.rs
@@ -1,0 +1,28 @@
+/*
+ * Ekubo API Client
+ *
+ * Сlient for Ekubo AMM DEX.
+ *
+ * The version of the OpenAPI document: 0.1.0
+ *
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+/// Quotes : The suggested route(s) to get the best price
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct Quotes {
+    #[serde(rename = "total")]
+    pub total: String,
+    #[serde(rename = "splits")]
+    pub splits: Vec<models::Quote>,
+}
+
+impl Quotes {
+    /// The suggested route(s) to get the best price
+    pub fn new(total: String, splits: Vec<models::Quote>) -> Quotes {
+        Quotes { total, splits }
+    }
+}
